<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
    >
    <TextView
		android:id="@+id/signin_dialog_msg_textview"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/sign_in_welcome_msg"/>
	<EditText
		android:id="@+id/signin_dialog_login_edittext"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:hint="@string/login_hint"
		/>
	<EditText
		android:id="@+id/signin_dialog_pwd_edittext"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:hint="@string/password_hint"
		android:password="true"
		/>
	<EditText
		android:id="@+id/signin_dialog_email_edittext"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:hint="@string/email_hint"
		android:inputType="textEmailAddress"
		android:visibility="gone"
		/>
	<Spinner
		android:id="@+id/signin_dialog_nativelang_spinner"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:visibility="gone"
		/>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
	    >
		<Button
			android:id="@+id/signin_dialog_login_button"
			android:layout_width="wrap_content" 
			android:layout_height="match_parent" 
			android:text="@string/log_in"
			android:onClick="submitCallbackLogin"
			/>
		<Button
			android:id="@+id/signin_dialog_register_button"
			android:layout_width="wrap_content" 
			android:layout_height="match_parent" 
			android:text="@string/register"
			android:onClick="register_mode"
			/>
	</LinearLayout>
</LinearLayout>
